Aim3 major updates

--- a/Aim2/code/Python/04b_TreeMap_FIA-TreeTable-V2.ipynb
+++ b/Aim2/code/Python/04b_TreeMap_FIA-TreeTable-V2.ipynb
@@ -389,7 +389,7 @@
       "10           PIPO  20.3  72.0      72.0  60.0   3.0   4.0      NaN  \n",
       "11           PIPO  20.1  60.0      60.0  50.0   3.0   5.0      NaN  \n",
       "\n",
-      "Total elapsed time: 0.79 minutes.\n",
+      "Total elapsed time: 0.85 minutes.\n",
       "\n",
       "~~~~~~~~~~\n",
       "\n"
@@ -987,7 +987,7 @@
     {
      "data": {
       "text/plain": [
-       "15"
+       "0"
       ]
      },
      "execution_count": 15,
@@ -1222,43 +1222,55 @@
       "8  0821970      Gambel oak       5   86.813187   2156.187038      0.000000   \n",
       "9  0821970  Lodgepole pine       5   86.813187   3532.886714    512.526454   \n",
       "\n",
-      "          ba_ld    tpp_live    tpp_dead       tpp_ld  ...  tree_ht_live  \\\n",
-      "0   5400.335836   76.783377    8.252514    85.035892  ...     46.812500   \n",
-      "1   1929.142456  390.145696    0.000000   390.145696  ...     11.225481   \n",
-      "2   2274.132217   74.106610    4.015150    78.121760  ...     41.375000   \n",
-      "3   6195.037933  126.187784    4.015150   130.202934  ...     14.350000   \n",
-      "4  40164.416540  961.783579  214.141334  1175.924914  ...     43.667007   \n",
-      "5   9506.340951  380.397262   18.737367   399.134629  ...     39.920096   \n",
-      "6   8806.772824  118.273261   21.414133   139.687394  ...     37.625000   \n",
-      "7   5474.066852   70.818540    4.015150    74.833690  ...     54.322321   \n",
-      "8   2156.187038  400.852763    0.000000   400.852763  ...     13.913718   \n",
-      "9   4045.413168  241.552725    5.353533   246.906258  ...     41.487500   \n",
+      "          ba_ld    tpp_live    tpp_dead       tpp_ld  ...  tpp_live_total  \\\n",
+      "0   5400.335836   76.783377    8.252514    85.035892  ...      2127.67757   \n",
+      "1   1929.142456  390.145696    0.000000   390.145696  ...      2127.67757   \n",
+      "2   2274.132217   74.106610    4.015150    78.121760  ...      2127.67757   \n",
+      "3   6195.037933  126.187784    4.015150   130.202934  ...      2127.67757   \n",
+      "4  40164.416540  961.783579  214.141334  1175.924914  ...      2127.67757   \n",
+      "5   9506.340951  380.397262   18.737367   399.134629  ...      2127.67757   \n",
+      "6   8806.772824  118.273261   21.414133   139.687394  ...      2127.67757   \n",
+      "7   5474.066852   70.818540    4.015150    74.833690  ...      3817.52317   \n",
+      "8   2156.187038  400.852763    0.000000   400.852763  ...      3817.52317   \n",
+      "9   4045.413168  241.552725    5.353533   246.906258  ...      3817.52317   \n",
       "\n",
-      "   tree_ht_dead  tree_dia_live  tree_dia_dead      H_ba     H_tpp  \\\n",
-      "0     32.187500      12.276042      12.276042  1.797801  1.772701   \n",
-      "1      0.000000       2.801106       2.801106  1.797801  1.772701   \n",
-      "2     27.500000       7.422500       7.422500  1.797801  1.772701   \n",
-      "3      3.500000       9.273750       9.273750  1.797801  1.772701   \n",
-      "4     42.639054       7.926688       7.926688  1.797801  1.772701   \n",
-      "5     24.960714       7.579061       7.579061  1.797801  1.772701   \n",
-      "6     28.314815       9.590833       9.590833  1.797801  1.772701   \n",
-      "7     14.125000      12.705804      12.705804  1.447809  1.510831   \n",
-      "8      0.000000       3.809218       3.809218  1.447809  1.510831   \n",
-      "9     29.800000       6.516083       6.516083  1.447809  1.510831   \n",
+      "   tpp_dead_total  qmd_live_mean  qmd_dead_mean  tree_ht_live_mean  \\\n",
+      "0      270.575649      88.343982      59.839315          33.567869   \n",
+      "1      270.575649      88.343982      59.839315          33.567869   \n",
+      "2      270.575649      88.343982      59.839315          33.567869   \n",
+      "3      270.575649      88.343982      59.839315          33.567869   \n",
+      "4      270.575649      88.343982      59.839315          33.567869   \n",
+      "5      270.575649      88.343982      59.839315          33.567869   \n",
+      "6      270.575649      88.343982      59.839315          33.567869   \n",
+      "7      339.949368      91.466743      49.223705          35.627996   \n",
+      "8      339.949368      91.466743      49.223705          35.627996   \n",
+      "9      339.949368      91.466743      49.223705          35.627996   \n",
       "\n",
-      "   ba_live_total  tpp_live_total  ba_live_pr  tpp_live_pr  \n",
-      "0   57526.866969      2127.67757    0.077776     0.036088  \n",
-      "1   57526.866969      2127.67757    0.033535     0.183367  \n",
-      "2   57526.866969      2127.67757    0.033663     0.034830  \n",
-      "3   57526.866969      2127.67757    0.104165     0.059308  \n",
-      "4   57526.866969      2127.67757    0.497716     0.452034  \n",
-      "5   57526.866969      2127.67757    0.141037     0.178785  \n",
-      "6   57526.866969      2127.67757    0.112107     0.055588  \n",
-      "7  107185.980601      3817.52317    0.047804     0.018551  \n",
-      "8  107185.980601      3817.52317    0.020116     0.105003  \n",
-      "9  107185.980601      3817.52317    0.032960     0.063275  \n",
+      "   tree_ht_dead_mean  tree_dia_live_mean  tree_dia_dead_mean  ba_live_pr  \\\n",
+      "0          22.728869            8.124283            8.124283    0.077776   \n",
+      "1          22.728869            8.124283            8.124283    0.033535   \n",
+      "2          22.728869            8.124283            8.124283    0.033663   \n",
+      "3          22.728869            8.124283            8.124283    0.104165   \n",
+      "4          22.728869            8.124283            8.124283    0.497716   \n",
+      "5          22.728869            8.124283            8.124283    0.141037   \n",
+      "6          22.728869            8.124283            8.124283    0.112107   \n",
+      "7          18.195832            8.371731            8.371731    0.047804   \n",
+      "8          18.195832            8.371731            8.371731    0.020116   \n",
+      "9          18.195832            8.371731            8.371731    0.032960   \n",
       "\n",
-      "[10 rows x 23 columns]\n",
+      "   tpp_live_pr  \n",
+      "0     0.036088  \n",
+      "1     0.183367  \n",
+      "2     0.034830  \n",
+      "3     0.059308  \n",
+      "4     0.452034  \n",
+      "5     0.178785  \n",
+      "6     0.055588  \n",
+      "7     0.018551  \n",
+      "8     0.105003  \n",
+      "9     0.063275  \n",
+      "\n",
+      "[10 rows x 31 columns]\n",
       "\n"
      ]
     },
@@ -1301,18 +1313,26 @@
     "    )\n",
     ")\n",
     "\n",
-    "# get the grid cell total\n",
+    "# calculate gridcell totals and averages\n",
     "totals = (\n",
     "    grid_tm_sp.groupby('grid_idx', as_index=False)\n",
     "    .agg(\n",
     "        ba_live_total=('ba_live', 'sum'),\n",
+    "        ba_dead_total=('ba_dead', 'sum'),\n",
     "        tpp_live_total=('tpp_live', 'sum'),\n",
+    "        tpp_dead_total=('tpp_dead', 'sum'),\n",
+    "        qmd_live_mean=('qmd_live', 'mean'), # average QMD\n",
+    "        qmd_dead_mean=('qmd_dead', 'mean'),\n",
+    "        tree_ht_live_mean=('tree_ht_live', 'mean'),\n",
+    "        tree_ht_dead_mean=('tree_ht_dead', 'mean'),\n",
+    "        tree_dia_live_mean=('tree_dia_live', 'mean'),\n",
+    "        tree_dia_dead_mean=('tree_dia_dead', 'mean'),\n",
     "    )\n",
     ")\n",
     "\n",
     "# merge back\n",
     "grid_tm_sp = grid_tm_sp.merge(totals, on='grid_idx', how='left')\n",
-    "# calculate proportions\n",
+    "# calculate proportions of live basal area and tree/pixel\n",
     "grid_tm_sp['ba_live_pr'] = grid_tm_sp['ba_live'] / grid_tm_sp['ba_live_total']\n",
     "grid_tm_sp['tpp_live_pr'] = grid_tm_sp['tpp_live'] / grid_tm_sp['tpp_live_total']\n",
     "\n",
@@ -1326,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "b99e0ef3-9891-4180-9a21-7fc722a7b88f",
    "metadata": {},
    "outputs": [
@@ -1355,7 +1375,7 @@
        "0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1391,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "3df58455-f81d-4cdc-85d3-71f800adbd5b",
    "metadata": {},
    "outputs": [
@@ -1422,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "929d6b12-1742-4750-b51e-70c6958013c9",
    "metadata": {},
    "outputs": [
@@ -1446,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "bfd40903-3182-455e-9d70-31ae078e6bee",
    "metadata": {},
    "outputs": [
@@ -1497,7 +1517,7 @@
        "0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1536,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "id": "24c536fd-4555-4382-9b8f-e841db6eec69",
    "metadata": {},
    "outputs": [
@@ -1546,12 +1566,14 @@
        "Index(['grid_idx', 'species_gp_n', 'tmid_n', 'forest_pct', 'ba_live',\n",
        "       'ba_dead', 'ba_ld', 'tpp_live', 'tpp_dead', 'tpp_ld', 'qmd_live',\n",
        "       'qmd_dead', 'qmd_ld', 'tree_ht_live', 'tree_ht_dead', 'tree_dia_live',\n",
-       "       'tree_dia_dead', 'H_ba', 'H_tpp', 'ba_live_total', 'tpp_live_total',\n",
-       "       'ba_live_pr', 'tpp_live_pr'],\n",
+       "       'tree_dia_dead', 'H_ba', 'H_tpp', 'ba_live_total', 'ba_dead_total',\n",
+       "       'tpp_live_total', 'tpp_dead_total', 'qmd_live_mean', 'qmd_dead_mean',\n",
+       "       'tree_ht_live_mean', 'tree_ht_dead_mean', 'tree_dia_live_mean',\n",
+       "       'tree_dia_dead_mean', 'ba_live_pr', 'tpp_live_pr'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1562,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "id": "0affd094-6b05-408d-9f12-40c0cbe6e44a",
    "metadata": {},
    "outputs": [
@@ -1579,10 +1601,10 @@
     {
      "data": {
       "text/plain": [
-       "11711"
+       "174"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1646,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "7f995f09-ed85-4097-aab1-da1cb7b4dbb3",
    "metadata": {},
    "outputs": [
@@ -1667,11 +1689,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "ed5f99d0-29a2-471f-9289-0af8e5be6d33",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gc.collect()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1680,6 +1715,30 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "204306bf-2c99-473c-8b03-f2a0106baea9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa083960-d885-45f3-9116-142d52e4f8cd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af88114c-51ea-4684-867d-8604b776af3c",
+   "metadata": {},
+   "source": [
+    "## Plots."
+   ]
   },
   {
    "cell_type": "code",
@@ -1714,14 +1773,6 @@
    "source": [
     "grid_tm_frp['species_gp_n'].unique()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5487e137-cb1b-4bf7-8997-074c64cb9263",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
