--- a/Aim2/code/Python/05a_TreeMap_Forest-Composition.ipynb
+++ b/Aim2/code/Python/05a_TreeMap_Forest-Composition.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "462f3abd-e007-4ede-941e-d761c08de786",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "7504761e-9699-4646-9d17-18de87134fc0",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "3c44fa3a-9cfe-4430-8c28-043abd68b8e6",
    "metadata": {},
    "outputs": [
@@ -218,8 +218,10 @@
       "Index(['grid_idx', 'species_gp_n', 'tmid_n', 'ba_live', 'ba_dead', 'ba_ld',\n",
       "       'tpp_live', 'tpp_dead', 'tpp_ld', 'qmd_live', 'qmd_dead', 'qmd_ld',\n",
       "       'tree_ht_live', 'tree_ht_dead', 'tree_dia_live', 'tree_dia_dead',\n",
-      "       'H_ba', 'H_tpp', 'ba_live_total', 'tpp_live_total', 'ba_live_pr',\n",
-      "       'tpp_live_pr'],\n",
+      "       'H_ba', 'H_tpp', 'ba_live_total', 'ba_dead_total', 'tpp_live_total',\n",
+      "       'tpp_dead_total', 'qmd_live_mean', 'qmd_dead_mean', 'tree_ht_live_mean',\n",
+      "       'tree_ht_dead_mean', 'tree_dia_live_mean', 'tree_dia_dead_mean',\n",
+      "       'ba_live_pr', 'tpp_live_pr'],\n",
       "      dtype='object')\n",
       "\n",
       "\tFORTYP unique grids: 44312\n",
@@ -252,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "1e7053cb-a618-4102-b9ad-ae9ed8de595c",
    "metadata": {},
    "outputs": [
@@ -270,10 +272,10 @@
     {
      "data": {
       "text/plain": [
-       "7119"
+       "91"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "ede54433-3f46-438e-aa92-497af57e75e3",
    "metadata": {},
    "outputs": [
@@ -304,7 +306,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "d26c7827-d6ea-47f6-a492-bfe119a77f23",
    "metadata": {},
    "outputs": [
@@ -334,7 +336,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "079fcc55-20ea-4871-852e-cc22cedd32c7",
    "metadata": {},
    "outputs": [
@@ -363,10 +365,10 @@
     {
      "data": {
       "text/plain": [
-       "13812"
+       "6906"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "dcb01003-7b31-46ee-9e51-09c9d7a93661",
    "metadata": {},
    "outputs": [
@@ -420,14 +422,14 @@
        "      <th>ba_live</th>\n",
        "      <th>ba_dead</th>\n",
        "      <th>...</th>\n",
-       "      <th>tree_ht_live</th>\n",
-       "      <th>tree_ht_dead</th>\n",
-       "      <th>tree_dia_live</th>\n",
-       "      <th>tree_dia_dead</th>\n",
-       "      <th>H_ba</th>\n",
-       "      <th>H_tpp</th>\n",
-       "      <th>ba_live_total</th>\n",
        "      <th>tpp_live_total</th>\n",
+       "      <th>tpp_dead_total</th>\n",
+       "      <th>qmd_live_mean</th>\n",
+       "      <th>qmd_dead_mean</th>\n",
+       "      <th>tree_ht_live_mean</th>\n",
+       "      <th>tree_ht_dead_mean</th>\n",
+       "      <th>tree_dia_live_mean</th>\n",
+       "      <th>tree_dia_dead_mean</th>\n",
        "      <th>ba_live_pr</th>\n",
        "      <th>tpp_live_pr</th>\n",
        "    </tr>\n",
@@ -446,14 +448,14 @@
        "      <td>4474.224525</td>\n",
        "      <td>926.111311</td>\n",
        "      <td>...</td>\n",
-       "      <td>46.812500</td>\n",
-       "      <td>32.187500</td>\n",
-       "      <td>12.276042</td>\n",
-       "      <td>12.276042</td>\n",
-       "      <td>1.797801</td>\n",
-       "      <td>1.772701</td>\n",
-       "      <td>57526.866969</td>\n",
        "      <td>2127.67757</td>\n",
+       "      <td>270.575649</td>\n",
+       "      <td>88.343982</td>\n",
+       "      <td>59.839315</td>\n",
+       "      <td>33.567869</td>\n",
+       "      <td>22.728869</td>\n",
+       "      <td>8.124283</td>\n",
+       "      <td>8.124283</td>\n",
        "      <td>0.077776</td>\n",
        "      <td>0.036088</td>\n",
        "    </tr>\n",
@@ -470,14 +472,14 @@
        "      <td>1929.142456</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>11.225481</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.801106</td>\n",
-       "      <td>2.801106</td>\n",
-       "      <td>1.797801</td>\n",
-       "      <td>1.772701</td>\n",
-       "      <td>57526.866969</td>\n",
        "      <td>2127.67757</td>\n",
+       "      <td>270.575649</td>\n",
+       "      <td>88.343982</td>\n",
+       "      <td>59.839315</td>\n",
+       "      <td>33.567869</td>\n",
+       "      <td>22.728869</td>\n",
+       "      <td>8.124283</td>\n",
+       "      <td>8.124283</td>\n",
        "      <td>0.033535</td>\n",
        "      <td>0.183367</td>\n",
        "    </tr>\n",
@@ -494,14 +496,14 @@
        "      <td>1936.529934</td>\n",
        "      <td>337.602283</td>\n",
        "      <td>...</td>\n",
-       "      <td>41.375000</td>\n",
-       "      <td>27.500000</td>\n",
-       "      <td>7.422500</td>\n",
-       "      <td>7.422500</td>\n",
-       "      <td>1.797801</td>\n",
-       "      <td>1.772701</td>\n",
-       "      <td>57526.866969</td>\n",
        "      <td>2127.67757</td>\n",
+       "      <td>270.575649</td>\n",
+       "      <td>88.343982</td>\n",
+       "      <td>59.839315</td>\n",
+       "      <td>33.567869</td>\n",
+       "      <td>22.728869</td>\n",
+       "      <td>8.124283</td>\n",
+       "      <td>8.124283</td>\n",
        "      <td>0.033663</td>\n",
        "      <td>0.034830</td>\n",
        "    </tr>\n",
@@ -518,14 +520,14 @@
        "      <td>5992.310479</td>\n",
        "      <td>202.727454</td>\n",
        "      <td>...</td>\n",
-       "      <td>14.350000</td>\n",
-       "      <td>3.500000</td>\n",
-       "      <td>9.273750</td>\n",
-       "      <td>9.273750</td>\n",
-       "      <td>1.797801</td>\n",
-       "      <td>1.772701</td>\n",
-       "      <td>57526.866969</td>\n",
        "      <td>2127.67757</td>\n",
+       "      <td>270.575649</td>\n",
+       "      <td>88.343982</td>\n",
+       "      <td>59.839315</td>\n",
+       "      <td>33.567869</td>\n",
+       "      <td>22.728869</td>\n",
+       "      <td>8.124283</td>\n",
+       "      <td>8.124283</td>\n",
        "      <td>0.104165</td>\n",
        "      <td>0.059308</td>\n",
        "    </tr>\n",
@@ -542,20 +544,20 @@
        "      <td>28632.045742</td>\n",
        "      <td>11532.370798</td>\n",
        "      <td>...</td>\n",
-       "      <td>43.667007</td>\n",
-       "      <td>42.639054</td>\n",
-       "      <td>7.926688</td>\n",
-       "      <td>7.926688</td>\n",
-       "      <td>1.797801</td>\n",
-       "      <td>1.772701</td>\n",
-       "      <td>57526.866969</td>\n",
        "      <td>2127.67757</td>\n",
+       "      <td>270.575649</td>\n",
+       "      <td>88.343982</td>\n",
+       "      <td>59.839315</td>\n",
+       "      <td>33.567869</td>\n",
+       "      <td>22.728869</td>\n",
+       "      <td>8.124283</td>\n",
+       "      <td>8.124283</td>\n",
        "      <td>0.497716</td>\n",
        "      <td>0.452034</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 27 columns</p>\n",
+       "<p>5 rows × 35 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -573,24 +575,31 @@
        "3  5058.04834   Piñon-juniper       2   5992.310479    202.727454  ...   \n",
        "4  5058.04834   Quaking aspen      18  28632.045742  11532.370798  ...   \n",
        "\n",
-       "   tree_ht_live  tree_ht_dead  tree_dia_live  tree_dia_dead      H_ba  \\\n",
-       "0     46.812500     32.187500      12.276042      12.276042  1.797801   \n",
-       "1     11.225481      0.000000       2.801106       2.801106  1.797801   \n",
-       "2     41.375000     27.500000       7.422500       7.422500  1.797801   \n",
-       "3     14.350000      3.500000       9.273750       9.273750  1.797801   \n",
-       "4     43.667007     42.639054       7.926688       7.926688  1.797801   \n",
+       "   tpp_live_total  tpp_dead_total  qmd_live_mean  qmd_dead_mean  \\\n",
+       "0      2127.67757      270.575649      88.343982      59.839315   \n",
+       "1      2127.67757      270.575649      88.343982      59.839315   \n",
+       "2      2127.67757      270.575649      88.343982      59.839315   \n",
+       "3      2127.67757      270.575649      88.343982      59.839315   \n",
+       "4      2127.67757      270.575649      88.343982      59.839315   \n",
        "\n",
-       "      H_tpp  ba_live_total  tpp_live_total  ba_live_pr  tpp_live_pr  \n",
-       "0  1.772701   57526.866969      2127.67757    0.077776     0.036088  \n",
-       "1  1.772701   57526.866969      2127.67757    0.033535     0.183367  \n",
-       "2  1.772701   57526.866969      2127.67757    0.033663     0.034830  \n",
-       "3  1.772701   57526.866969      2127.67757    0.104165     0.059308  \n",
-       "4  1.772701   57526.866969      2127.67757    0.497716     0.452034  \n",
+       "   tree_ht_live_mean  tree_ht_dead_mean  tree_dia_live_mean  \\\n",
+       "0          33.567869          22.728869            8.124283   \n",
+       "1          33.567869          22.728869            8.124283   \n",
+       "2          33.567869          22.728869            8.124283   \n",
+       "3          33.567869          22.728869            8.124283   \n",
+       "4          33.567869          22.728869            8.124283   \n",
        "\n",
-       "[5 rows x 27 columns]"
+       "   tree_dia_dead_mean  ba_live_pr  tpp_live_pr  \n",
+       "0            8.124283    0.077776     0.036088  \n",
+       "1            8.124283    0.033535     0.183367  \n",
+       "2            8.124283    0.033663     0.034830  \n",
+       "3            8.124283    0.104165     0.059308  \n",
+       "4            8.124283    0.497716     0.452034  \n",
+       "\n",
+       "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "9a7cfa77-d287-4f0a-af5e-60bbc6800473",
    "metadata": {},
    "outputs": [
@@ -621,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "74065898-697d-4971-8065-2b5ae41b80ca",
    "metadata": {},
    "outputs": [
@@ -632,12 +641,14 @@
        "       'balive_sum', 'species_gp_n', 'tmid_n', 'ba_live', 'ba_dead', 'ba_ld',\n",
        "       'tpp_live', 'tpp_dead', 'tpp_ld', 'qmd_live', 'qmd_dead', 'qmd_ld',\n",
        "       'tree_ht_live', 'tree_ht_dead', 'tree_dia_live', 'tree_dia_dead',\n",
-       "       'H_ba', 'H_tpp', 'ba_live_total', 'tpp_live_total', 'ba_live_pr',\n",
-       "       'tpp_live_pr'],\n",
+       "       'H_ba', 'H_tpp', 'ba_live_total', 'ba_dead_total', 'tpp_live_total',\n",
+       "       'tpp_dead_total', 'qmd_live_mean', 'qmd_dead_mean', 'tree_ht_live_mean',\n",
+       "       'tree_ht_dead_mean', 'tree_dia_live_mean', 'tree_dia_dead_mean',\n",
+       "       'ba_live_pr', 'tpp_live_pr'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "eb30783a-04c5-4e48-9dc6-ba260a0c911d",
    "metadata": {},
    "outputs": [
@@ -688,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "eef4ae66-860f-440c-9d51-ea654c02a662",
    "metadata": {},
    "outputs": [
@@ -730,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "a94b8e59-2255-4e59-ad23-08b8bf13eeb3",
    "metadata": {},
    "outputs": [
@@ -752,7 +763,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "20c1b7fd-0346-4302-aa26-5c540cd9f2a0",
    "metadata": {},
    "outputs": [
@@ -777,12 +788,14 @@
        "       'balive_sum', 'species_gp_n', 'tmid_n', 'ba_live', 'ba_dead', 'ba_ld',\n",
        "       'tpp_live', 'tpp_dead', 'tpp_ld', 'qmd_live', 'qmd_dead', 'qmd_ld',\n",
        "       'tree_ht_live', 'tree_ht_dead', 'tree_dia_live', 'tree_dia_dead',\n",
-       "       'H_ba', 'H_tpp', 'ba_live_total', 'tpp_live_total', 'ba_live_pr',\n",
-       "       'tpp_live_pr'],\n",
+       "       'H_ba', 'H_tpp', 'ba_live_total', 'ba_dead_total', 'tpp_live_total',\n",
+       "       'tpp_dead_total', 'qmd_live_mean', 'qmd_dead_mean', 'tree_ht_live_mean',\n",
+       "       'tree_ht_dead_mean', 'tree_dia_live_mean', 'tree_dia_dead_mean',\n",
+       "       'ba_live_pr', 'tpp_live_pr'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "8be34775-a3e3-49cb-857f-04283eda9d25",
    "metadata": {},
    "outputs": [
@@ -821,7 +834,7 @@
       "1  27.233212  189.301124  27.759364  \n",
       "2  27.233212  189.301124  27.759364  \n",
       "\n",
-      "[3 rows x 88 columns]\n"
+      "[3 rows x 96 columns]\n"
      ]
     }
    ],
@@ -834,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "8b900f17-c082-4c38-9133-2bc4f828ab5d",
    "metadata": {},
    "outputs": [
@@ -844,7 +857,7 @@
        "219408"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "a75ad8c6-0b64-45f9-aa89-9a22079d97ad",
    "metadata": {},
    "outputs": [
